[package]
name = "drifting_bird"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "drifting_bird"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { git = "https://github.com/drift-labs/anchor.git", rev = "ed950fe", version = "0.26.0" }
anchor-spl = {version = "0.26.0"}
drift = {git = "https://github.com/drift-labs/protocol-v2.git", features = ["no-entrypoint"], tag="v2.38.0" }
bytemuck = { version = "1.4.0" }
borsh = "0.9.3"
num-traits = "0.2"
uint = { version = "0.9.1", default-features = false }
num-derive = "0.3"
thiserror = "1.0"
num-integer = "0.1.44"
arrayref = "0.3.6"
base64 = "0.13.0"
phoenix-v1 = { version = "0.2.4", features = ["no-entrypoint"] }
pyth-sdk-solana = "0.7.2"
borsh-derive = "0.9.3"
bumpalo="3.14.0"
[dev-dependencies]
bytes = "1.2.0"
